# nixnav

./: CLAUDE.md  README.md  flake.nix  main.py  nixnav-toggle  nixnav.desktop  shell.nix
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: architecture.md  nixos-integration.md
